# SSTS

./: .gitignore  instrumentation.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml  server-release.yml
.qoder/repowiki/zh/content/: 开发指南.md  快速开始.md  故障排除与常见问题.md  配置与定制.md  项目概述.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  IPC通信协议.md  Rust命令接口.md  前端调用接口.md
.qoder/repowiki/zh/content/架构设计/: Tauri框架集成.md  数据流设计.md  整体架构概览.md  架构设计.md  组件交互机制.md
.qoder/repowiki/zh/content/核心功能模块/: 前端界面系统.md  前端组件库.md  多测试能力支持.md  数据库存储系统.md  核心功能模块.md  热更新系统.md  状态管理系统.md  系统集成功能.md  设备通信系统.md  运行时管理系统.md  配置管理系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
app/: globals.css  layout.tsx  page.tsx
app/brake-test/: page.tsx
app/control-force-test/: page.tsx
app/debug/: page.tsx
app/steering-test/: page.tsx
app/torque-test/: page.tsx
components/: AppReady.tsx  MobileScaler.tsx
components/ui/: AngleGauge.tsx  Button.tsx  DataDisplay.tsx  IndustrialCard.tsx  MeasurementTable.tsx  NumericInput.tsx  NumericKeypad.tsx  SettingsModal.tsx  StatusIndicator.tsx  TopAppBar.tsx  UpdateNotification.tsx  WindowControls.tsx
docs/: cross-platform-build.md
lib/: config.ts  tauri.ts  updater.ts
lib/comm/: device-service.ts  index.ts  scale-service.ts  types.ts  use-device.ts  use-scale.ts
lib/db/: brake-records.ts  control-force-records.ts  steering-records.ts  torque-records.ts
lib/store/: app-store.ts  brake-store.ts  control-force-store.ts  index.ts  steering-store.ts  torque-store.ts  updater-store.ts
scripts/: bundle-sidecar.js  deploy-build.js  mock-device-server.js  standalone-utils.js
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/server/: package.json  server.js
src-tauri/src/: config.rs  delta.rs  lib.rs  main.rs
src-tauri/src/comm/: bluetooth.rs  commands.rs  connection.rs  heartbeat.rs  mod.rs  protocol.rs  scale_commands.rs  scale_protocol.rs  state.rs
