[package]
name = "vacdevice"
version = "0.3.0"
edition = "2021"
description = "VACDevice - 机动车角度综合校准装置"

[lib]
name = "vacdevice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "~2.6.0", features = [] }

[dependencies]
tauri = { version = "~2.10.0", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "~2.5.0"
tauri-plugin-dialog = "~2.7.0"
tauri-plugin-updater = "~2.10.0"
tauri-plugin-process = "~2.3.0"
tauri-plugin-single-instance = "~2.4.0"
tauri-plugin-notification = "~2.3.0"
tauri-plugin-os = "~2.3.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["net", "time", "sync", "macros", "io-util", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
btleplug = "~0.11.8"
uuid = "1"
log = "0.4"
futures = "0.3"
